feat(учебная группа): добавил поле для ссылки
